<resources>
    <string name="app_name">campasiliano</string>
    <string name="title_activity_maps">Map</string>
    <string name="search">Search</string>
    <string name="username">username</string>
    <string name="desc">descripition</string>
    <string name="date">11/05/2021</string>
    <string name="status">Mon status</string>
    <string name="status_desc">Appuyez pour ajouter un statut</string>
    <string name="img">img</string>
    <string name="slog">Votre application de communication et d\'actualités universitaire</string>
    <string name="accept_license">Accepter et continuer</string>
    <string name="license">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="anywhere">A N Y W H E R E</string>
    <string name="verify_number">Campasiliano vous enverra un SMS pour verifier votre numero de telephone</string>
    <string name="phone_number">phone number</string>
    <string name="_855">855</string>
    <string name="_d">+</string>
    <string name="sms_validation">des frais de SMS de l\'oprateur peuvent s\'appliquer</string>
    <string name="next">Suivant</string>
    <string name="code">Entre le code</string>
    <string name="user_info">Mes informations</string>
    <string name="user_info_require">Veuillez fournire votre nom et une photo de profile optionnelle</string>
    <string name="name">name</string>
    <string name="friends">Inviter des amis</string>
    <string name="invite">Inviter</string>
    <string name="new_group">Nouveau group</string>
    <string name="setting">Parametres</string>
    <string name="new_broadcast">Diffuser un message</string>
    <string name="starred_message">Message suivie</string>
    <string name="account">Mon compte</string>
    <string name="privacy">privacy, security, change number</string>
    <string name="message">Messages</string>
    <string name="message_desc">Themes, wallpapers, chat history</string>
    <string name="notification">Notifications</string>
    <string name="notification_desc">Actualités, messages, groups, appels, communiquer</string>
    <string name="data_usage">Utilisation de donnees et des stockages</string>
    <string name="data_usage_desc">Network usage, auto-download</string>
    <string name="help">Aide</string>
    <string name="help_desc">FAQ, contact us, privacy policy</string>
    <string name="invite_friend">Initer des amis</string>
    <string name="profile">Profile</string>
    <string name="about">A propos</string>
    <string name="phone">Telephone</string>
    <string name="phone_text">+243 825341040</string>
    <string name="profile_photo">Profile photo</string>
    <string name="enter_name">Entre votre nom</string>
    <string name="text_profile">Mon profile</string>
    <string name="logout">Deconnexion</string>
    <string name="select_contact">Selectioner un contact</string>
    <string name="contact">Contacts</string>
    <string name="_contact">Contact</string>
    <string name="last_connection">derrnier connexion ...</string>
    <string name="my_message">message</string>
    <string name="mute_notification">mute notification</string>
    <string name="custom_notification">custom notification</string>
    <string name="media_visibility">media visibility</string>
    <string name="encryption">Encryption</string>
    <string name="encryption_verify">Message to this chat and calls are secured with end-to-end encryption. Tap to verify</string>
    <string name="about_number">About and phone number</string>
    <string name="block">Block</string>
    <string name="report_contact">Report contact</string>
    <string name="document">Document</string>
    <string name="camera">Camera</string>
    <string name="audio">Audio</string>
    <string name="location">Location</string>
    <string name="send_image">Envoyer la photo</string>
    <string name="space" />
    <string name="verify">Verifier</string>
    <string name="sms_validation_">Entre le code de verification</string>
    <string name="welcome">Bienvenue sur Campasiliano</string>
    <string name="last_name">post-nom</string>
    <string name="first_name">prenom</string>
    <string name="sex">sexe</string>
    <string name="save">Enregistre</string>
    <string name="login">Connexion</string>
    <string name="register">Insrciption</string>
    <string name="email">email</string>
    <string name="password">Mot de passe</string>
    <string name="confirm">Confirmer</string>
    <string name="register_title">S\'incrire</string>
    <string name="select_sex">Selectionner votre sexe</string>
    <string name="vacation">Vacation</string>
    <string name="orientation">Orientation</string>
    <string name="promotion">Promotion</string>
    <string name="establishment">Etablisment</string>
    <string name="student_info">Parcoure universitaire</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="write_message">Ecriver ICI</string>
    <string name="mot_de_passe_oublier">mot de passe oublier ?</string>
    <string name="reset">Reinitialiser</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="mat">Matricule</string>
    <string name="home">Accueil</string>
    <string name="event">Evenements</string>
    <string name="course">Cours</string>
    <string name="news">Actualiter</string>
    <string name="share">Partager</string>
    <string name="authority">Etablisment</string>
    <string name="coordination">Coordination</string>
    <string name="leader">Chef de promotion</string>
    <string name="groupV">Group</string>
    <string name="function">function</string>
    <string name="default_date_txt">date</string>
    <string name="send_conversation">Envoyer votre demande</string>
    <string name="view_conversation">Voir la discution</string>
    <string name="cp">chef de promotion</string>
    <string name="group_leader">creator</string>
    <string name="member">member</string>
    <string name="description">description</string>
    <string name="default_desc_txt">description</string>
    <string name="adhesion_d">"Adherer "</string>
    <string name="go_event">Participer</string>
</resources>