<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".views.activities.startup.WelcomeScreenActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:layout_margin="50dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/imgLogo"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:src="@drawable/logo1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:fontFamily="@font/segoeuib"
            android:text="@string/welcome"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:padding="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="13sp"
            android:text="@string/slog"
            android:textColor="@color/black"
            android:gravity="center" />

        <TextView
            android:padding="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:text="@string/license"
            android:gravity="center"/>

        <com.google.android.material.button.MaterialButton
            app:cornerRadius="20dp"
            app:backgroundTint="@color/purple_700"
            android:padding="10dp"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:textColor="@color/white"
            android:text="@string/login"
            android:fontFamily="@font/segoeuib"/>

        <com.google.android.material.button.MaterialButton
            app:cornerRadius="20dp"
            app:backgroundTint="@color/purple_700"
            android:padding="10dp"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:textColor="@color/white"
            android:text="@string/register"
            android:fontFamily="@font/segoeuib"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="from"/>

        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anywhere"
            android:textColor="@color/purple_700"
            android:textStyle="bold"
            android:textSize="16sp"/>

    </LinearLayout>

</RelativeLayout>