<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activities.auth.CodeValidationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical"
        android:layout_centerVertical="true">


        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/sms_validation"/>

        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/sms_validation_"/>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_gravity="center"
            android:id="@+id/ed_code"
            app:boxBackgroundColor="@color/white"
            app:hintEnabled="false"
            android:layout_marginStart="15dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/code"
                android:inputType="phone"
                android:maxLength="13"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton"
            app:backgroundTint="@color/purple_700"
            app:cornerRadius="20dp"
            android:textColor="@color/white"
            android:padding="10dp"
            android:id="@+id/btn_verify"
            android:layout_marginTop="50dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_gravity="bottom"
            android:text="@string/next"
            android:fontFamily="@font/segoeuib"/>

    </LinearLayout>

</RelativeLayout>