<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/alert_dialog_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:id="@+id/txt_name"/>

        <com.google.android.material.card.MaterialCardView
            android:layout_below="@id/txt_name"
            android:layout_marginTop="30dp"
            android:id="@+id/card"
            android:layout_marginStart="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            app:cardElevation="30dp"
            app:cardCornerRadius="23dp">

            <LinearLayout
                android:padding="15dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <com.makeramen.roundedimageview.RoundedImageView
                            android:id="@+id/imgUserPhoto"
                            app:riv_corner_radius="23dp"
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:src="@color/silver"
                            android:scaleType="centerCrop"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_marginStart="15dp"
                        android:layout_width="0dp"
                        android:layout_weight="1.2"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/group_leader"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/name"
                            android:textStyle="bold"
                            android:textSize="15sp"
                            android:textColor="@color/black"
                            android:id="@+id/txt_names"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/email"
                            android:textSize="13sp"
                            android:textColor="@color/black"
                            android:id="@+id/txt_email"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/phone"
                            android:textStyle="bold"
                            android:textSize="13sp"
                            android:textColor="@color/black"
                            android:id="@+id/txt_phone"/>
                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:id="@+id/content"
            android:padding="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_below="@id/card">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_desc_txt"
                android:layout_marginTop="10dp"
                android:id="@+id/txt_desc"/>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_marginBottom="30dp"
            android:layout_below="@id/content"
            android:id="@+id/btn_action"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:layout_centerHorizontal="true"
            android:text="@string/adhesion_d"
            android:textAllCaps="false"
            android:textSize="13sp"
            app:cornerRadius="23dp"
            app:strokeWidth="1dp"
            app:strokeColor="@color/purple_700"/>

    </RelativeLayout>

</LinearLayout>