<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="135dp"
        android:layout_height="135dp"
        android:src="@color/silver"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/imgUserPhoto"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            app:cardElevation="30dp"
            app:cardCornerRadius="23dp">

            <RelativeLayout
                android:padding="15dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_name"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:id="@+id/txt_first_name"/>

                <TextView
                    android:layout_below="@id/txt_first_name"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:id="@+id/txt_name"/>

                <TextView
                    android:visibility="gone"
                    android:layout_below="@id/txt_name"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_name"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:id="@+id/txt_last_name"/>

                <TextView
                    android:visibility="gone"
                    android:layout_below="@id/txt_last_name"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sex"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:id="@+id/txt_sex"/>

                <TextView
                    android:visibility="gone"
                    android:layout_below="@id/txt_sex"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:id="@+id/txt_phone"/>

                <TextView
                    android:visibility="gone"
                    android:layout_below="@id/txt_phone"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:id="@+id/txt_email"/>

                <TextView
                    android:layout_below="@id/txt_email"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/function"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:id="@+id/txt_function"/>

                <TextView
                    android:visibility="gone"
                    android:layout_below="@id/txt_function"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_date_txt"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:id="@+id/txt_date"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_marginTop="15dp"
                    android:layout_below="@id/txt_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_marginBottom="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <androidx.cardview.widget.CardView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            app:cardCornerRadius="25dp"
                            app:cardBackgroundColor="@color/silver">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:paddingStart="15dp"
                                android:paddingEnd="15dp"
                                android:background="@android:color/transparent">
                                <com.google.android.material.textfield.TextInputLayout
                                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                                    android:id="@+id/ed_message"
                                    app:boxBackgroundColor="@color/silver"
                                    app:boxStrokeWidth="0dp"
                                    app:boxStrokeWidthFocused="0dp"
                                    app:hintEnabled="false"
                                    android:layout_width="0dp"
                                    android:layout_weight="1"
                                    android:layout_height="wrap_content">

                                    <com.google.android.material.textfield.TextInputEditText
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:inputType="textMultiLine"
                                        android:hint="@string/my_message"
                                        android:maxLines="5" />

                                </com.google.android.material.textfield.TextInputLayout>
                            </LinearLayout>

                        </androidx.cardview.widget.CardView>


                        <com.google.android.material.floatingactionbutton.FloatingActionButton
                            android:id="@+id/btn_send"
                            android:layout_gravity="center_horizontal"
                            android:layout_width="90dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:src="@drawable/ic_send"
                            android:tint="@color/white"/>

                    </LinearLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_action"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="12dp"
                        android:text="@string/view_conversation"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="13sp"
                        app:backgroundTint="@color/purple_700"
                        app:cornerRadius="23dp"
                        app:strokeWidth="0dp" />

                </LinearLayout>


            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

    </RelativeLayout>


</LinearLayout>